wording, mnemonic screen word index

--- a/screen-backup-file-import/screen-backup-file-import.css
+++ b/screen-backup-file-import/screen-backup-file-import.css
@@ -17,3 +17,7 @@
 screen-backup-file-import-password {
 	justify-content: stretch;
 }
+
+#screen-backup-file-import-password-error {
+	margin-bottom: 15px;
+}
