--- a/screen-backup-file/screen-backup-file.css
+++ b/screen-backup-file/screen-backup-file.css
@@ -5,6 +5,7 @@
 @import '../x-password-setter/x-password-setter.css';
 @import '../x-slide-indicator/x-slide-indicator.css';
 @import '../screen-backup-file-import/screen-backup-file-import.css';
+@import "../x-toast/x-toast.css";
 
 @media (max-height: 480px){
 	screen-create-password button{
