--- a/screen-backup-file-import/screen-backup-file-import.css
+++ b/screen-backup-file-import/screen-backup-file-import.css
@@ -18,6 +18,10 @@ screen-backup-file-import-password {
 	justify-content: stretch;
 }
 
+screen-backup-file-import-intro h2 {
+    padding-bottom: 16px !important;
+}
+
 #screen-backup-file-import-password-error {
 	margin-bottom: 15px;
 }
