password-input: add eye

--- a/x-password-input/x-password-input.css
+++ b/x-password-input/x-password-input.css
@@ -1,1 +1,7 @@
 @import '../x-input/x-input.css';
+
+x-password-input form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
