v1 with routing forward and backward

--- a/x-router/demo/demo.css
+++ b/x-router/demo/demo.css
@@ -5,9 +5,11 @@ body {
 }
 
 main {
-    background: white;
-    color: var(--primary-color);
     margin: 5vh 5vw;
     width: 90vw;
     height: 90vh;
+}
+
+a.next:before {
+    content: "\00BB ";
 }
