fixing CSS for password input (placing eye button mostly

--- a/x-password-input/x-password-input.css
+++ b/x-password-input/x-password-input.css
@@ -4,4 +4,15 @@ x-password-input form {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    left: 20px;
+}
+
+x-password-input form input {
+    padding-right: 40px;
+}
+
+x-password-input form #eye {
+    position: relative;
+    right: 40px;
 }
