Added level 4 to password indicator, refactored CSS: moved it to respective component

--- a/x-password-input/x-password-input.css
+++ b/x-password-input/x-password-input.css
@@ -5,7 +5,6 @@ x-password-input form {
     justify-content: center;
     align-items: center;
     position: relative;
-    left: 20px;
 }
 
 x-password-input form input {
@@ -13,6 +12,6 @@ x-password-input form input {
 }
 
 x-password-input form #eye {
-    position: relative;
-    right: 40px;
+    position: absolute;
+    right: -3px;
 }
