--- a/x-password-indicator/x-password-indicator.css
+++ b/x-password-indicator/x-password-indicator.css
@@ -13,6 +13,10 @@ x-password-indicator meter {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
+x-password-indicator .label {
+	text-align: center;
+}
+
 x-password-indicator meter::-webkit-meter-bar {
   background: none;
   background-color: rgba(0, 0, 0, 0.1);
@@ -21,12 +25,11 @@ x-password-indicator meter::-webkit-meter-bar {
 /* Webkit based browsers */
 x-password-indicator meter[value="10"]::-webkit-meter-optimum-value { background: var(--error-color); }
 x-password-indicator meter[value="70"]::-webkit-meter-optimum-value { background: var(--warning-color); }
-x-password-indicator meter[value="100"]::-webkit-meter-optimum-value { background: var(--success-color); }
+x-password-indicator meter[value="100"]::-webkit-meter-optimum-value,
+x-password-indicator meter[value="130"]::-webkit-meter-optimum-value { background: var(--success-color); }
 
 /* Gecko based browsers */
 x-password-indicator meter[value="10"]::-moz-meter-bar { background: var(--error-color); }
 x-password-indicator meter[value="70"]::-moz-meter-bar { background: var(--warning-color); }
-x-password-indicator meter[value="100"]::-moz-meter-bar { background: var(--success-color); }
-
-x-password-indicator .label {
-}
+x-password-indicator meter[value="100"]::-moz-meter-bar,
+x-password-indicator meter[value="130"]::-moz-meter-bar { background: var(--success-color); }
