small fix + flex box display

--- a/x-password-setter/x-password-setter.css
+++ b/x-password-setter/x-password-setter.css
@@ -2,6 +2,9 @@
 @import '../x-password-indicator/x-password-indicator.css';
 
 x-password-setter {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	width: 100%;
 	max-width: var(--max-width);
 }
