Rename 'Recovery Phrase' -> 'Recovery Words/Word List'

--- a/x-mnemonic-phrase/x-recovery-phrase.css
+++ b/x-mnemonic-phrase/x-recovery-phrase.css
@@ -14,7 +14,7 @@
 }
 
 .x-recovery-phrase:before {
-    content: 'Recovery Phrase';
+    content: 'Recovery Words';
     display: block;
     position: absolute;
     left: 50%;
