XRouter: Added event callbacks onEntry, onAfterEntry, onBeforeExit, onExit as well as using reverse animation when going one step back.

--- a/x-router/demo/demo.css
+++ b/x-router/demo/demo.css
@@ -4,7 +4,10 @@ body {
     background: var(--primary-background);
 }
 
-main {
+x-test {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin: 5vh 5vw;
     width: 90vw;
     height: 90vh;
