--- a/browser-warning/browser-warning.css
+++ b/browser-warning/browser-warning.css
@@ -1,5 +1,3 @@
-@import '../x-screen/x-screen.css';
-
 noscript {
     font-size: 32px;
 }
@@ -17,4 +15,15 @@ body[browser-unsupported]::after {
 
 body[browser-unsupported] > * {
     display: none !important;
+}
+
+@media (max-height: 650px) {
+    body * {
+        display: none;
+    }
+
+    body:after {
+        white-space: pre;
+        content: "You're screen is too small. \a Please zoom out. \a\a Use \2318  and [-] on Mac, \a [Ctrl] and [-] on Windows/Linux, \a or [Ctrl] and scroll.";
+    }
 }
