--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -5,6 +5,10 @@ x-accounts {
     width: 100%;
 }
 
+x-accounts button + button {
+    margin-left: 1em;
+}
+
 x-accounts-list {
 	display: flex;
     width: 100%;
@@ -12,8 +16,9 @@ x-accounts-list {
     flex-grow: 1;
     overflow-y: auto;
     overflow-x: hidden;
-    margin-bottom: 24px;
+    margin-top: 12px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
     flex-direction: column;
 }
 
@@ -48,7 +53,8 @@ x-account x-identicon svg {
 
 x-account .x-account-info {
     text-align: left;
-    max-width: calc(100% - 96px);
+    width: 100%;
+    max-width: calc(100% - 88px);
 }
 
 x-account .x-account-label {
@@ -56,6 +62,9 @@ x-account .x-account-label {
     text-align: left;
     font-weight: bold;
     margin-bottom: 2px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 x-account .x-account-bottom {
