--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -119,7 +119,7 @@ x-accounts-list:empty{
 x-accounts-list:empty:before {
 	display: flex;
 	flex-grow: 1;
-	content: 'Click below to add an account';
+	content: 'Click above to add an account';
 	font-size: 20px;
 	align-items: center;
 	justify-content: center;
