Add loading animation when waiting for balance in XAccounts

--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -125,3 +125,43 @@ x-accounts-list:empty:before {
 	justify-content: center;
 	height: 100%;
 }
+
+.dot-loader,
+.dot-loader::before,
+.dot-loader::after {
+    display: inline-block;
+    width: 0.5em;
+    height: 0.5em;
+    border-radius: 50%;
+    /* background: white; */
+    box-shadow: 0.5em 0 white;
+    animation: dot-loader-animation 1s ease-in-out 0s infinite;
+}
+
+.dot-loader {
+    position: relative;
+    animation-delay: 0.1s;
+    margin: 0 1.4em 0.12em 0.5em;
+}
+
+.dot-loader::before,
+.dot-loader::after {
+    content: '';
+    position: absolute;
+}
+
+.dot-loader::before {
+    left: -0.75em;
+    animation-delay: 0s;
+}
+
+.dot-loader::after {
+    left: 0.75em;
+    animation-delay: 0.2s;
+}
+
+@keyframes dot-loader-animation {
+    15% { box-shadow: 0.5em -0.25em white; }
+    30% { box-shadow: 0.5em 0.25em white; }
+    0%, 45%, 100% { box-shadow: 0.5em 0 white; }
+}
