--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -1,4 +1,5 @@
 @import '../x-address/x-address.css';
+@import '../x-modal/x-modal.css';
 @import '/elements/x-loading-animation/x-loading-animation.css';
 
 x-accounts {
