--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -39,12 +39,12 @@ x-transaction:last-child {
 
 x-transaction > * {
     display: table-cell;
+    vertical-align: middle;
 }
 
 x-transaction x-identicon {
-    width: 80px;
-    min-width: 50px;
-    height: 71px;
+    width: 50px;
+    height: 50px;
     margin-right: 8px;
 }
 
