--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -176,7 +176,15 @@ x-accounts-list:empty:before {
     animation: dot-loader-animation 1s ease-in-out 0s infinite;
 }
 
-.dot-loader {
+.dot-loader.white,
+.dot-loader.white::before,
+.dot-loader.white::after {
+    box-shadow: 0.5em 0 white;
+    animation: dot-loader-animation-white 1s ease-in-out 0s infinite;
+}
+
+.dot-loader,
+.dot-loader.white {
     position: relative;
     animation-delay: 0.1s;
     margin: 0 1.2em 0.16em 0.2em;
@@ -188,12 +196,14 @@ x-accounts-list:empty:before {
     position: absolute;
 }
 
-.dot-loader::before {
+.dot-loader::before,
+.dot-loader.white::before {
     left: -0.6em;
     animation-delay: 0s;
 }
 
-.dot-loader::after {
+.dot-loader::after,
+.dot-loader.white::after {
     left: 0.6em;
     animation-delay: 0.2s;
 }
@@ -202,6 +212,12 @@ x-accounts-list:empty:before {
     15% { box-shadow: 0.5em -0.2em #212121; }
     30% { box-shadow: 0.5em 0.2em #212121; }
     0%, 45%, 100% { box-shadow: 0.5em 0 #212121; }
+}
+
+@keyframes dot-loader-animation-white {
+    15% { box-shadow: 0.5em -0.2em white; }
+    30% { box-shadow: 0.5em 0.2em white; }
+    0%, 45%, 100% { box-shadow: 0.5em 0 white; }
 }
 
 x-accounts-list x-no-content {
