--- a/x-loader/x-loader.css
+++ b/x-loader/x-loader.css
@@ -1,12 +1,17 @@
-x-loader[loading]:not([loading=false]) {
+x-loader {
+    display: none;
+}
+
+x-loader.showing {
+    background: rgba(0,0,0,0.5);
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
-    background: var(--primary-background);
+    z-index: 2;
     display: flex;
     flex-direction: column;
-    align-content: space-around;
     align-items: center;
     justify-content: center;
 }
