Added animated 'wrong passphrase' hint

--- a/x-password-setter/x-password-setter.css
+++ b/x-password-setter/x-password-setter.css
@@ -8,3 +8,25 @@ x-password-setter {
 	width: 100%;
 	max-width: var(--max-width);
 }
+
+ x-password-setter div[buttons] {
+	 position: relative;
+ }
+
+ x-password-setter div[buttons] > * {
+	 position: absolute;
+	 top: 0;
+ }
+
+ x-password-setter [wrong] {
+	 background: var(--error-color);
+	 color: white;
+ }
+
+ x-password-setter button {
+	 transition: opacity 300ms;
+ }
+
+ x-password-setter.wrong button {
+	 opacity: 0;
+ }
