--- a/mixin-modal/mixin-modal.css
+++ b/mixin-modal/mixin-modal.css
@@ -34,7 +34,7 @@ x-modal-container > * {
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
         0 1px 8px 0 rgba(0, 0, 0, 0.12),
         0 3px 3px -2px rgba(0, 0, 0, 0.4);
-    padding: 32px;
+    padding: 24px 32px;
     border-radius: 5px;
 }
 
