Add XAmount to all places, extract x-dot-loader

--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -1,6 +1,7 @@
 @import '../x-address/x-address.css';
 @import '../mixin-modal/mixin-modal.css';
 @import '/elements/x-loading-animation/x-loading-animation.css';
+@import '/elements/x-amount/x-amount.css';
 
 x-accounts {
     text-align: right;
@@ -109,9 +110,10 @@ x-account-modal .x-account-bottom {
     margin-top: 12px;
 }
 
-x-account .x-account-balance,
-x-account-modal .x-account-balance {
-    font-weight: bold;
+x-account x-amount,
+x-account-modal x-amount {
+    font-size: 1.4em;
+    margin-top: -0.2em;
 }
 
 x-account .x-address {
@@ -162,62 +164,6 @@ x-accounts-list:empty:before {
 	align-items: center;
 	justify-content: center;
 	height: 100%;
-}
-
-.dot-loader,
-.dot-loader::before,
-.dot-loader::after {
-    display: inline-block;
-    width: 0.4em;
-    height: 0.4em;
-    border-radius: 50%;
-    /* background: white; */
-    box-shadow: 0.5em 0 #212121;
-    animation: dot-loader-animation 1s ease-in-out 0s infinite;
-}
-
-.dot-loader.white,
-.dot-loader.white::before,
-.dot-loader.white::after {
-    box-shadow: 0.5em 0 white;
-    animation: dot-loader-animation-white 1s ease-in-out 0s infinite;
-}
-
-.dot-loader,
-.dot-loader.white {
-    position: relative;
-    animation-delay: 0.1s;
-    margin: 0 1.2em 0.16em 0.2em;
-}
-
-.dot-loader::before,
-.dot-loader::after {
-    content: '';
-    position: absolute;
-}
-
-.dot-loader::before,
-.dot-loader.white::before {
-    left: -0.6em;
-    animation-delay: 0s;
-}
-
-.dot-loader::after,
-.dot-loader.white::after {
-    left: 0.6em;
-    animation-delay: 0.2s;
-}
-
-@keyframes dot-loader-animation {
-    15% { box-shadow: 0.5em -0.2em #212121; }
-    30% { box-shadow: 0.5em 0.2em #212121; }
-    0%, 45%, 100% { box-shadow: 0.5em 0 #212121; }
-}
-
-@keyframes dot-loader-animation-white {
-    15% { box-shadow: 0.5em -0.2em white; }
-    30% { box-shadow: 0.5em 0.2em white; }
-    0%, 45%, 100% { box-shadow: 0.5em 0 white; }
 }
 
 x-accounts-list x-no-content {
