--- a/x-amount/x-amount.css
+++ b/x-amount/x-amount.css
@@ -1,52 +1,34 @@
-x-amount,
-x-amount-input {
-    text-align: center;
-    padding: 16px 0;
-    transition: all 500ms;
-    box-sizing: border-box;
+@import '/elements/x-dot-loader/x-dot-loader.css';
+
+x-amount {
+    display: inline;
+    font-weight: 600;
+    letter-spacing: 0.02em;
 }
 
-x-currency-1 {
-    font-size: 36px;
-    font-weight: 300;
-    line-height: 27px;
-    display: block;
-    position: relative;
-}
-
-x-currency-2 {
-    padding-bottom: 0;
-    font-size: 15px;
-    font-weight: 700;
-    opacity: 0.6;
-}
-
-x-amount-input input {
-    font-weight: 300;
-}
-
-
-/* ≈ Character */
-
-x-currency-2:before {
-    content: '\2248';
-    padding-right: 3px;
-    margin-left: -12px;
-}
-
-/* Currency Symbols */
-
-x-currency-1:after,
-x-currency-2:after {
-    padding-left: 4px;
-    letter-spacing: 0.08em;
-    margin-right: -32px;
-    font-size: 15px;
-    font-weight: 700;
-}
-
-/* Empty State */
-
-x-currency-2 {
+x-amount x-currency-nim {
     display: none;
+}
+
+x-amount .integers {
+
+}
+
+x-amount .main-decimals {
+
+}
+
+x-amount .rest-decimals,
+x-amount .ticker {
+    font-weight: 400;
+    font-size: 0.75em;
+}
+
+x-amount .rest-decimals {
+    margin-left: 0.05em;
+}
+
+x-amount[display] .ticker,
+x-amount[display] .rest-decimals {
+    font-size: 0.6em;
 }
