--- a/x-accounts/x-accounts-dropdown.css
+++ b/x-accounts/x-accounts-dropdown.css
@@ -4,7 +4,7 @@ x-accounts-dropdown {
     cursor: pointer;
     color: #212121;
     background: white;
-    width: 484px;
+    width: 488px;
     height: 88px;
     border-radius: 3px;
     position: relative;
@@ -62,6 +62,7 @@ x-accounts-dropdown > [dropdown-container] {
     max-height: 0;
     transition: max-height .5s;
     overflow: hidden;
+    z-index: 1;
     background: white;
     box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
                 0  6px 30px 5px rgba(0, 0, 0, 0.12),
