Show number of confirmations in XTransactionModal
Properly handle removed properties (e.g. when showing a pending tx in the modal after a mined tx).

--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -84,6 +84,7 @@ x-transaction-modal label {
 }
 
 x-transaction-modal .blockHeight,
+x-transaction-modal .confirmations,
 x-transaction-modal .timestamp,
 x-transaction-modal x-amount,
 x-transaction-modal .fee {
