--- a/x-wallet-backup-import/x-wallet-backup-import.css
+++ b/x-wallet-backup-import/x-wallet-backup-import.css
@@ -62,6 +62,11 @@ x-wallet-backup-backdrop {
     display: flex;
 }
 
+a[secondary] {
+    margin-top: 18px;
+    text-align: center;
+}
+
 @media (min-height: 750px) {
     x-wallet-backup-import {
         min-height: 400px;
