--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -65,6 +65,12 @@ x-transaction x-identicon svg {
     height: 100%;
 }
 
+x-transaction.incoming .label[recipient],
+x-transaction.outgoing .label[sender],
+x-transaction.transfer .label {
+    font-weight: bold;
+}
+
 x-transaction x-amount {
     text-align: right;
     font-size: 1.4em;
