Fix identicon size in XTransactionModal

--- a/x-transactions/x-transactions.css
+++ b/x-transactions/x-transactions.css
@@ -87,8 +87,17 @@ x-transactions-list x-no-content {
 	height: 100%;
 }
 
+x-transaction-modal {
+    max-width: 600px;
+}
+
 x-transaction-modal center {
     padding-bottom: 1em;
+}
+
+x-transaction-modal x-identicon {
+    display: block;
+    width: 160px;
 }
 
 x-transaction-modal label {
