plugin import words

--- a/x-password-setter/x-password-setter.css
+++ b/x-password-setter/x-password-setter.css
@@ -21,6 +21,11 @@ x-password-setter {
  x-password-setter [wrong] {
 	 background: var(--error-color);
 	 color: white;
+     display: none;
+ }
+
+ .x-password-setter.wrong [wrong] {
+     display: flex;
  }
 
  x-password-setter button {
