--- a/x-address-input/x-address-input.css
+++ b/x-address-input/x-address-input.css
@@ -1,12 +1,18 @@
 @import '../x-address/x-address.css';
 
 x-address-input.x-address {
-    max-width: 540px;
+    max-width: 600px;
     padding: 4px 0 4px 0;
     text-transform: uppercase;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     display: flex;
     align-items: center;
+    font-size: 20px;
+}
+
+x-address-input.x-address[small] {
+    max-width: 540px;
+    font-size: 13px;
 }
 
 x-address-input form {
