--- a/x-accounts/x-accounts.css
+++ b/x-accounts/x-accounts.css
@@ -42,6 +42,7 @@ x-account {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     animation: from-right 500ms;
     cursor: pointer;
+    position: relative;
 }
 
 x-account-modal .x-modal-body {
@@ -80,15 +81,13 @@ x-account-modal x-identicon {
     margin: 0 auto;
 }
 
-x-account .x-account-info,
-x-account-modal .x-account-info {
+x-account .x-account-info {
     text-align: left;
     width: 100%;
     max-width: calc(100% - 88px);
 }
 
-x-account .x-account-label,
-x-account-modal .x-account-label {
+x-account .x-account-label {
     display: block;
     text-align: left;
     font-weight: bold;
@@ -98,17 +97,25 @@ x-account-modal .x-account-label {
     text-overflow: ellipsis;
 }
 
-x-account .x-account-bottom,
-x-account-modal .x-account-bottom {
-    display: flex;
-    justify-content: space-between;
+x-account .x-account-bottom {
+    text-align: right;
     margin-top: 12px;
 }
 
-x-account x-amount,
+x-account-modal .x-account-bottom {
+    text-align: center;
+}
+
+x-account x-amount {
+    display: block;
+    font-size: 1.5em;
+    margin-top: -0.25em;
+}
+
 x-account-modal x-amount {
-    font-size: 1.4em;
-    margin-top: -0.2em;
+    display: block;
+    font-size: 2em;
+    margin: 0.5em 0 1em;
 }
 
 x-account .x-address {
@@ -121,10 +128,12 @@ x-account .x-address {
     padding: 0;
     min-width: auto;
     font-weight: normal;
+    opacity: 0.6;
 }
 
 x-account-modal .x-address {
-    margin: 1em auto;
+    display: inline-block;
+    margin: 0.5em auto;
 }
 
 x-account .secure-icon,
@@ -132,13 +141,27 @@ x-account-modal .secure-icon,
 x-account .vesting-icon,
 x-account-modal .vesting-icon {
     display: block;
+    position: absolute;
+    left: 56px;
+    top: 47px;
     width: 1.4em;
     height: 1.4em;
-    margin-top: -0.2em;
     background-image: url('/elements/x-accounts/ic_security_black_24px.svg');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: 85%;
+    background-color: white;
+    padding: 12px;
+    border: 0.5px solid lightgray;
+    border-radius: 50%;
+}
+
+x-account-modal .secure-icon,
+x-account-modal .vesting-icon {
+    padding: 22px;
+    left: calc(50% + 38px);
+    top: 154px;
+    background-size: 80%;
 }
 
 x-account .vesting-icon,
@@ -156,6 +179,12 @@ x-account-modal .vesting-icon {
     x-account {
         justify-content: center;
         padding: 8px 16px;
+    }
+
+    x-account .secure-icon,
+    x-account .vesting-icon {
+        left: 72px;
+        top: 48px;
     }
 }
 
