Make password-setter.wrongPassphrase() work properly

--- a/x-password-setter/x-password-setter.css
+++ b/x-password-setter/x-password-setter.css
@@ -18,14 +18,13 @@ x-password-setter {
 	 top: 0;
  }
 
- x-password-setter [wrong] {
+ x-password-setter [wrong][disabled] {
 	 background: var(--error-color);
 	 color: white;
-     display: none;
  }
 
- .x-password-setter.wrong [wrong] {
-     display: flex;
+ x-password-setter:not(.wrong) [wrong] {
+	 display: none;
  }
 
  x-password-setter button {
