--- a/x-expandable/x-expandable.css
+++ b/x-expandable/x-expandable.css
@@ -1,4 +1,5 @@
 x-expandable {
+    display: block;
     position: relative;
     background: white;
     color: #212121;
@@ -16,16 +17,21 @@ x-expandable[transparent] {
     color: inherit;
 }
 
+x-expandable > div {
+    width: 100%;
+    height: 100%;
+}
+
 x-expandable [expandable-trigger] {
     display: inline-block;
     box-sizing: border-box;
-    padding: 8px 40px 8px 8px;
+    padding-right: 40px;
     transition: padding .3s;
     position: relative;
 }
 
 x-expandable[disabled] [expandable-trigger] {
-    padding-right: 8px;
+    padding-right: 0;
 }
 
 x-expandable [expandable-trigger]::before,
@@ -63,7 +69,6 @@ x-expandable [expandable-content] {
     box-sizing: border-box;
     transition: max-height .5s;
     overflow: hidden;
-    padding: 0 8px;
     cursor: initial;
 }
 
