x-send-transaction: make fee and validity start advanced settings

--- a/x-send-transaction/x-send-transaction.css
+++ b/x-send-transaction/x-send-transaction.css
@@ -37,3 +37,7 @@
 .x-send-transaction button {
     margin-top: 48px;
 }
+
+.x-send-transaction [expandable-content] :first-child {
+    margin-top: 8px;
+}
